--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>text to speech - UDUAK BEN TUTORIALS</title>
     <link rel="stylesheet" href="style.css">
+    <title>IMAGE SEARCH ENGINE - UDUAK BEN TUTORIALS</title>
 </head>
 <body>
-    <div class="hero">
-        <h1>Text to Speech <span>Converter</span></h1>
-        <textarea placeholder="Write anyting here..." id="text"></textarea>
-        <div class="row">
-            <select></select>
-            <button id="button">Listen</button>
-        </div>
-    </div>
-    
+    <h1>Image Search Engine</h1>
+    <form id="search-form">
+        <input type="text" placeholder="Search here" id="search-input">
+        <button>Search</button>
+    </form>
+    <div id="search-result"></div>
+    <button id="show-more-button">Show More</button>
 
 
 <script src="script.js"></script>
